# mileslib

./: .coveragerc  .gitignore  __init__.py  __main__.py  __projectoverview.txt  app.py  config.py  core.py  goal.txt  logger.py  main.py  mileslib.py  mileslib_cli.py  mileslib_core.py  mileslib_infra.py  pyproject.toml  pytest.ini  readme.md  render_boilerplate.py  requirements-dev.txt  staticmethods.py  testmanager.py
.mileslib/: Dockerfile.cloudflared  Dockerfile.sp
_config/: mileslib_config.toml
api/: app.py
azure/: __init__.py  azure_subscription.py  azure_tenant.py  client.py  ids.py  run.py  tenant.py
azurestrapper/: user.py
backend_methods/: backend_methods.py  milesrequests.py  projectutil.py  template_manager.py
cli/: main.py
cli_methods/: __init__.py  check_dependencies.py  cli_methods.py  init_azure.py  init_project.py
config/: _cli_command_template.j2  _test_boilerplate.j2  config.json  fixture_templates.txt  static_fixture_templates.txt  test_templates.txt
context/: __init__.py  _globals.py  cache.py  config.py  decorator.py  envloader.py  logger.py  milescontext.py
flask/: flask.py
foobar/: Dockerfile.sp
front_end/: __init__.py  client.py  htmxlib.py  templates.py  views.py
leads/: apollo.py  zoom_info_api.py
logs/: 2025-05-05.13-40-23.txt  2025-05-05.13-41-43.txt  2025-05-05.13-42-24.txt  2025-05-05.13-58-53.txt  2025-05-05.13-59-25.txt  2025-05-05.14-00-11.txt  2025-05-05.14-02-32.txt  2025-05-05.14-02-48.txt  2025-05-05.14-11-55.txt  2025-05-05.14-20-14.txt  2025-05-05.14-20-45.txt  2025-05-05.14-22-28.txt  (+61 more)
milesazure/: ids.py  (+8 more)
(+91 files in other folders)
