[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mileslib"
version = "0.1.0"
description = "A reusable Python utility library with built-in test automation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "packaging"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mileslib*"]
