[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mileslib"
version = "0.1.0"
description = "Modular Python utility framework for CLI, logging, and scaffolding."
authors = [
    { name="Miles Luce" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "structlog>=22.0.0",
    "jinja2>=3.1.0",
    "pytest>=7.0.0",
    "requests>=2.28.0"
]

[project.scripts]
mileslib = "mileslib:CLI().launch"

[tool.setuptools.packages.find]
where = ["mileslib"]